<resources>
    <string name="app_name">EasyDoc</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_appointments">Appointments</string>
    <string name="title_settings">Office Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appointment_added">Appointment added successfully</string>
    <string name="appointment_failed">Error, Appointment didnt add.\nCheck the avilable Time and Date</string>
    <string name="name">Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="finish">Finish</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="please_enter_your_message_to_the_doctor">Please enter your message to the doctor</string>
    <string name="add_appointment">Add appointment</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="no_repeate">No repeate</string>
    <string name="once_a_week">Once a week</string>
    <string name="once_two_weeks">Once 2 weeks</string>
    <string name="month">Month</string>
    <string name="_2_months">2 Months</string>
    <string name="next">Next</string>
    <string name="wait_list">Wait List</string>
    <string name="upcomming_appointments">Upcomming Appointments</string>
    <string name="show_n_wait_list">Show\n Wait List</string>
    <string name="nav">Nav</string>
    <string name="call">Call</string>
    <string name="user_name">user name</string>
    <string name="next_appointment">next appointment</string>
    <string name="select">Select</string>
    <string name="start_time">Start Time</string>
    <string name="month_in_advance">Month in advance</string>
    <string name="end_time">End Time</string>
    <string name="update_phone_number">Update Phone Number</string>
    <string name="submit">Submit</string>
    <string name="office_start_time">Office Start Time:</string>
    <string name="office_end_time">Office end time:</string>
    <string name="office_phone_number">Office phone number:</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="no_appointments">There is no upcomming appointments</string>
    <string name="no_passed_appointments">There is no passed appointments</string>
    <string-array name="start_times">
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
    </string-array>
    <string-array name="end_times">
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
    </string-array>
    <string-array name="month_in_advance">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>