<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.settings.SettingsFragment"
    android:paddingBottom="?attr/actionBarSize">

    <!-- Start Time Layout -->
    <LinearLayout
        android:id="@+id/startTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:text="@string/select" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menuStartTime"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin">

            <AutoCompleteTextView
                android:id="@+id/startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:text="8:00"
                android:hint="@string/start_time"
                app:simpleItems="@array/start_times" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Month in Advance Layout -->
    <LinearLayout
        android:id="@+id/monthInAdvanceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeLayout">

        <TextView
            android:id="@+id/textMonthInAdvance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:text="@string/month_in_advance" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sliderMonthInAdvance"
            style="@style/Widget.MaterialComponents.Slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:stepSize="1"
            android:thumbTint="@color/material_dynamic_tertiary0"
            android:trackTint="@color/material_dynamic_neutral0"
            android:value="0"
            android:valueFrom="0"
            android:valueTo="12"
            app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
            app:layout_constraintTop_toBottomOf="@+id/updatePhoneNumberLayout" />
    </LinearLayout>

    <!-- End Time Layout -->
    <LinearLayout
        android:id="@+id/endTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthInAdvanceLayout">

        <TextView
            android:id="@+id/textEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:text="@string/select" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menuEndTime"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin">

            <AutoCompleteTextView
                android:id="@+id/endTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/end_time"
                tools:text="16:00"
                app:simpleItems="@array/end_times" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Update Phone Number Layout -->
    <LinearLayout
        android:id="@+id/updatePhoneNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimeLayout">

        <TextView
            android:id="@+id/textUpdatePhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_small_margin"
            android:text="@string/update_phone_number" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menuUpdatePhoneNumber"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:padding="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatePhoneNumberLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubmit">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/showOfficeStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:text="@string/office_start_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/officeStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/showOfficeStartTime"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="8:00" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/showOfficeMonthInAdvance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:text="@string/month_in_advance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showOfficeStartTime" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/officeMonthInAdvance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/showOfficeMonthInAdvance"
            app:layout_constraintTop_toBottomOf="@+id/officeStartTime"
            tools:text=":3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/showOfficeEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:text="@string/office_end_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showOfficeMonthInAdvance" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/officeEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/showOfficeEndTime"
            app:layout_constraintTop_toBottomOf="@+id/officeMonthInAdvance"
            tools:text="16:00" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/showOfficePhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:text="@string/office_phone_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showOfficeEndTime" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/officePhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/showOfficePhoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/officeEndTime"
            tools:text="1234567890" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
